Added functionality for Submitted Applications

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="application">
                     <div class="header">
                         <p>1</p>
-                        <img src="src/img/submitted-applications/icons/arrow-down.png" alt="arrow down">
+                        <img src="src/img/submitted-applications/icons/arrow.png" alt="arrow">
                     </div>
                     <div class="info">
                         <div class="wrapper">
@@ -148,7 +148,7 @@
                 <div class="application">
                     <div class="header">
                         <p>2</p>
-                        <img src="src/img/submitted-applications/icons/arrow-down.png" alt="arrow down">
+                        <img src="src/img/submitted-applications/icons/arrow.png" alt="arrow">
                     </div>
                     <div class="info">
                         <div class="wrapper">
@@ -265,10 +265,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="application active">
+                <div class="application">
                     <div class="header">
                         <p>3</p>
-                        <img src="src/img/submitted-applications/icons/arrow-up.png" alt="arrow down">
+                        <img src="src/img/submitted-applications/icons/arrow.png" alt="arrow">
                     </div>
                     <div class="info">
                         <div class="wrapper">
