Added form validation and functionality to add skills for Slider

--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
                                     </div>
                                 </div>
                             </section>
-                            <section class="insigts">
-                                <h6>Insigts</h6>
+                            <section class="insights">
+                                <h6>Insights</h6>
                                 <div class="attend-organize-devtalks-question question">
                                     <p>Would you attend Devtalks and maybe also organize your own?</p>
                                     <div class="yes answer">
@@ -236,8 +236,8 @@
                                     </div>
                                 </div>
                             </section>
-                            <section class="insigts">
-                                <h6>Insigts</h6>
+                            <section class="insights">
+                                <h6>Insights</h6>
                                 <div class="attend-organize-devtalks-question question">
                                     <p>Would you attend Devtalks and maybe also organize your own?</p>
                                     <div class="yes answer">
@@ -356,8 +356,8 @@
                                     </div>
                                 </div>
                             </section>
-                            <section class="insigts">
-                                <h6>Insigts</h6>
+                            <section class="insights">
+                                <h6>Insights</h6>
                                 <div class="attend-organize-devtalks-question question">
                                     <p>Would you attend Devtalks and maybe also organize your own?</p>
                                     <div class="yes answer">
@@ -394,35 +394,36 @@
                 <div class="wrapper">
                     <!-- Personal Information Slide (Left) -->
 
-                    <!-- <section class="personal-information">
+                    <section class="personal-information">
                         <div class="header">
                             <h4>Hey, Rocketeer, what are your coordinates?</h4>
                         </div>
                         <div class="info">
                             <form>
-                                <div class="input-div error">
+                                <div class="input-div first-name">
                                     <input type="text" id="first-name" name="first-name" placeholder="First Name">
-                                    <p class="error-message">* first name is required</p>
+                                    <p class="error-message"></p>
                                 </div>
-                                <div class="input-div error">
+                                <div class="input-div last-name">
                                     <input type="text" id="last-name" name="last-name" placeholder="Last Name">
-                                    <p class="error-message">* last name should include 3 or more characters</p>
+                                    <p class="error-message"></p>
                                 </div>
-                                <div class="input-div">
+                                <div class="input-div e-mail">
                                     <input type="email" id="e-mail" name="e-mail" placeholder="E Mail">
                                     <p class="error-message"></p>
                                 </div>
-                                <div class="input-div">
-                                    <input type="tel" id="phone-number" name="phone-number" placeholder="+955 5_ _ _ _">
+                                <div class="input-div tel">
+                                    <input type="tel" id="tel" name="tel" placeholder="_ _ _ _ _ _ _ _">
+                                    <p class="country-code">+995 5</p>
                                     <p class="error-message"></p>
                                 </div>
                             </form>
                         </div>
-                    </section> -->
+                    </section>
 
                     <!-- Technical Skillset Slide (Left) -->
 
-                    <!-- <section class="technical-skillset">
+                    <section class="technical">
                         <div class="header">
                             <h4>Tell us about your skills</h4>
                         </div>
@@ -435,36 +436,38 @@
                                         <option value="css">CSS</option>
                                         <option value="javascript">JAVASCRIPT</option>
                                     </select>
+                                    <p class="error-message"></p>
                                     <img src="src/img/slider/icons/dropdown.png" alt="arrow">
                                 </div>
                                 <div class="input-div">
-                                    <input type="text" id="experience" name="experience" placeholder="Experience Duration in Years">
+                                    <input type="number" id="experience" name="experience" placeholder="Experience Duration in Years">
                                     <p class="error-message"></p>
                                 </div>
-                                <button>Add Programming Language</button>
+                                <a href="#" class="add-skill-btn">Add Programming Language</a>
+                                <p class="error-message"></p>
                             </form>
                             <div class="skill-set">
-                                <div class="skill">
+                                <!-- <div class="skill">
                                     <div class="skill-text">
                                         <p class="skill-name">PHP</p>
                                         <p class="skill-experience">Years of Experience: 3</p>
                                     </div>
-                                    <img src="src/img/slider/icons/remove.png" alt="remove">
+                                    <img src="src/img/slider/icons/remove.png" alt="remove" class="remove-btn">
                                 </div>
                                 <div class="skill">
                                     <div class="skill-text">
                                         <p class="skill-name">React</p>
                                         <p class="skill-experience">Years of Experience: 2</p>
                                     </div>
-                                    <img src="src/img/slider/icons/remove.png" alt="remove">
-                                </div>
+                                    <img src="src/img/slider/icons/remove.png" alt="remove" class="remove-btn">
+                                </div> -->
                             </div>
                         </div>
-                    </section>  -->
+                    </section> 
 
                     <!-- Covid Slide (Left) -->
 
-                    <!-- <section class="covid">
+                    <section class="covid">
                         <div class="header">
                             <h4>Covid Stuff</h4>
                         </div>
@@ -481,16 +484,18 @@
                                     <label for="hybrid">
                                         <input type="radio" id="hybrid" name="work-space" value="hybrid"> Hybrid
                                     </label>
+                                    <p class="error-message work-space"></p>
                                 </div>
                                 <div class="covid-contact-question question">
                                     <p>Did you contact Covid-19? :(</p>
-                                    <label for="yes">
-                                        <input type="radio" id="yes" name="covid-contact" value="yes"> Yes
+                                    <label for="covid-contact-yes">
+                                        <input type="radio" id="covid-contact-yes" name="covid-contact" value="yes"> Yes
                                     </label>
-                                    <label for="no">
-                                        <input type="radio" id="no" name="covid-contact" value="no"> No
+                                    <label for="covid-contact-no">
+                                        <input type="radio" id="covid-contact-no" name="covid-contact" value="no"> No
                                     </label>
-                                    
+                                    <p class="error-message covid-contact"></p>
+
                                     <div class="when">
                                         <p>When?</p>
                                         <div class="input-div custom-date-input">
@@ -502,17 +507,18 @@
                                 </div>
                                 <div class="vaccinate-question question">
                                     <p>Have you been vaccinated?</p>
-                                    <label for="yes">
-                                        <input type="radio" id="yes" name="vaccinate" value="yes"> Yes
+                                    <label for="vaccinate-yes">
+                                        <input type="radio" id="vaccinate-yes" name="vaccinate" value="yes"> Yes
                                     </label>
-                                    <label for="no">
-                                        <input type="radio" id="no" name="vaccinate" value="no"> No
+                                    <label for="vaccinate-no">
+                                        <input type="radio" id="vaccinate-no" name="vaccinate" value="no"> No
                                     </label>
-                                    
+                                    <p class="error-message vaccinate"></p>
+
                                     <div class="when">
                                         <p>When did you get your last covid vaccine?</p>
                                         <div class="input-div custom-date-input">
-                                            <input type="date" id="covid-contact-date" name="covid-contact-date">
+                                            <input type="date" id="vaccinate-date" name="vaccinate-date">
                                             <img src="src/img/slider/icons/calendar.png" alt="calendar">
                                             <p class="error-message"></p>
                                         </div>
@@ -520,11 +526,11 @@
                                 </div>
                             </form>
                         </div>
-                    </section> -->
+                    </section>
 
                     <!-- Redberrian Insights (Left) -->
 
-                    <!-- <section class="insights">
+                    <section class="insights">
                         <div class="header">
                             <h4>What about you?</h4>
                         </div>
@@ -532,22 +538,23 @@
                             <form>
                                 <div class="attend-organize-devtalks-question question">
                                     <p>Would you attend Devtalks and maybe also organize your own?</p>
-                                    <label for="yes">
-                                        <input type="radio" id="yes" name="attend-organize-devtalks" value="yes"> Yes
+                                    <label for="attend-organize-devtalks-yes">
+                                        <input type="radio" id="attend-organize-devtalks-yes" name="attend-organize-devtalks" value="yes"> Yes
                                     </label>
-                                    <label for="no">
-                                        <input type="radio" id="no" name="attend-organize-devtalks" value="no"> No
+                                    <label for="attend-organize-devtalks-no">
+                                        <input type="radio" id="attend-organize-devtalks-no" name="attend-organize-devtalks" value="no"> No
                                     </label>
+                                    <p class="error-message"></p>
                                 </div>
                                 <div class="speak-devtalks-question question">
                                     <p>What would you speak about at Devtalk?</p>
-                                    <div class="input-div">
+                                    <div class="textarea-div">
                                         <textarea name="speak-devtalks" id="speak-devtalks" placeholder="I would..."></textarea>
                                         <p class="error-message"></p>
                                     </div>
                                 </div>
                                 <div class="special-question question">
-                                    <div class="input-div">
+                                    <div class="textarea-div">
                                         <p>Tell us something special</p>
                                         <textarea name="special" id="special" placeholder="I..."></textarea>
                                         <p class="error-message"></p>
@@ -555,7 +562,7 @@
                                 </div>
                             </form>
                         </div>
-                    </section> -->
+                    </section>
                 </div>
                 <!-- Slider navigation -->
                 <div class="slider-nav">
@@ -565,7 +572,7 @@
                         <div class="slide" data-goTo="2"></div>
                         <div class="slide" data-goTo="3"></div>
                         <div class="slide" data-goTo="4"></div>
-                        <div class="slide"></div>
+                        <div class="slide" data-goTo="5"></div>
                     </div>
                     <img src="src/img/slider/icons/next.png" alt="next" class="next">
                 </div>
@@ -575,47 +582,47 @@
                 <div class="wrapper">
                     <!-- Personal Information Slide (Right) -->
 
-                    <!-- <section class="personal-information">
+                    <section class="personal-information">
                         <div class="header">
                             <h4>Redberry Origins</h4>
                         </div>
                         <div class="info">
                             <p>You watch “What? Where? When?” Yeah. Our founders used to play it. That’s where they got a question about a famous American author and screenwriter Ray Bradbury. Albeit, our CEO Gaga Darsalia forgot the exact name and he answered Ray Redberry. And at that moment, a name for a yet to be born company was inspired - Redberry 😇</p>
                         </div>
-                    </section> -->
+                    </section>
 
                     <!-- Technical Skillset Slide (Right) -->
 
-                    <!-- <section class="technical-skillset">
+                    <section class="technical">
                         <div class="header">
                             <h4>A bit about our battles</h4>
                         </div>
                         <div class="info">
                             <p>As we said, Redberry has been on the field for quite some time now, and we have touched and embraced a variety of programming languages, technologies, philosophies, and frameworks. We are battle-tested in PHP Laravel Stack with Vue.js, refined in React, and allies with Serverside technologies like Docker and Kubernetes, and now we have set foot in the web3 industry.</p>
                         </div>
-                    </section> -->
+                    </section>
 
                     <!-- Covid Slide (Right) -->
 
-                    <!-- <section class="covid">
+                    <section class="covid">
                         <div class="header">
                             <h4>Redberry Covid Policies</h4>
                         </div>
                         <div class="info">
                             <p>As this infamous pandemic took over the world, we adjusted our working practices so that our employees can be as safe and comfortable as possible. We have a hybrid work environment, so you can either work from home or visit our lovely office on Sairme Street. If it was up to us, we would love you to see us in the office because we think face-to-face communications > Zoom meetings. Both on the fun and productivity scales.</p>
                         </div>
-                    </section> -->
+                    </section>
 
                     <!-- Redberrian Insights (Right) -->
 
-                    <!-- <section class="insights">
+                    <section class="insights">
                         <div class="header">
                             <h4>Redberrian Insights</h4>
                         </div>
                         <div class="info">
                             <p>We were soo much fun before the pandemic started! Parties almost every weekend and lavish employee birthday celebrations! Unfortunately, covid ruined that fun like it did almost everything else in the world. But we try our best to zhuzh it up a bit. For example, we host biweekly Devtalks where our senior and lead developers talk about topics they are passionate about. Previous topics have included Web3, NFT, Laravel 9, Kubernetes, etc. We hold these talks in the office but you can join our Zoom broadcast as well. Feel free to join either as an attendee or a speaker!</p>
                         </div>
-                    </section> -->
+                    </section>
                 </div>
             </div>
         </section>
